--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang="en-us"><script src="https://pygame-web.github.io/archives/0.8/pythons.js" type=module id="site" data-python="cpython3.11" data-os="vtx,fs,snd,gui" async defer>#<!--
 
 print("""
-Loading mobil from mobil.apk
+Loading orbital from orbital.apk
     Pygbag Version : 0.8.6
     Template Version : 0.8.3
     Python  : 3.11
     CDN URL : https://pygame-web.github.io/archives/0.8/
     Screen  : 1280x720
-    Title   : mobil
-    Folder  : mobil
+    Title   : orbital
+    Folder  : orbital
     Authors : pgw
     SPDX-License-Identifier: cookiecutter.spdx
 
@@ -84,12 +84,12 @@ async def custom_site():
 
 
 
-    apk = "mobil.apk"
+    apk = "orbital.apk"
 
-    bundle = "mobil"
+    bundle = "orbital"
 
     # the C or js loader could do that but be explicit.
-    appdir = Path(f"/data/data/{bundle}") # /data/data/mobil
+    appdir = Path(f"/data/data/{bundle}") # /data/data/orbital
     appdir.mkdir()
 
 
@@ -239,7 +239,7 @@ config = {
     user_canvas_managed : 0,
     ume_block : 1,
     can_close : 0,
-    archive : "mobil",
+    archive : "orbital",
     gui_debug : 3,
     cdn : "https://pygame-web.github.io/archives/0.8/",
     autorun : 0,
@@ -248,7 +248,7 @@ config = {
 
 </script>
 
-    <title>mobil</title>
+    <title>orbital</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
